# ray-tracer

./: .gitignore  CLAUDE.md  Cargo.toml  GRID_ACCELERATION.md  HOW_IT_WORKS.md  LICENSE  REFACTOR_COMPARISON.md  TRAIT_USAGE.md  benchmark_results.txt  benchmark_results_extended.txt  bugs.md  ray-tracing-flow.mmd  test_ray.rs
.github/workflows/: deploy-docs.yml
benches/: bounding_volumes.rs
diagrams/: 1-pipeline-overview.mmd  2-dda-traversal.mmd  3-intersection-algorithms.mmd  4-memory-layout.mmd  5-performance-analysis.mmd  complete-ray-tracing-flow.mmd
docs/: .gitignore  book.toml  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/Interesting/: BOUNDING_SPHERES.md
docs/interesting/: aabb.md  advanced-techniques.md  bounding-spheres.md  bvh.md  charts-demo.md  color-sampling.md  core-concepts.md  debug-visualization.md  game-engine-facts.md  index.md  lighting-shadows.md  materials-physics.md  performance.md
docs/src/: BVH_VISUAL_GUIDE.md  DYNAMIC_WORLDS.md  README.md  SUMMARY.md  (+1 more)
examples/: canvas_layer_example.rs  massive_benchmark.rs  ray_tracing_layer_example.rs
src/: camera.rs  cli.rs  demo.rs  display.rs  display.wgsl  frame.rs  grid.rs  grid_triangles.rs  lib.rs  main.rs  main_simple.rs  raytracer.wgsl  raytracer_grid.wgsl  raytracer_triangles.wgsl  raytracer_unified.wgsl  renderer.rs  scene.rs  types.rs  window.rs
src/core/: bvh.rs  (+18 more)
tests/: aabb_tests.rs  box_data_tests.rs  canvas_layer_tests.rs  dda_grid_traversal_tests.rs  grid_capacity_tests.rs  grid_tests.rs  ray_tests.rs
tools/: test_ray.rs  test_specific_ray.rs
(+34 files in other folders)
