[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ray-tracer"
path = "src/main.rs"

[[bin]]
name = "test_ray"
path = "test_ray.rs"

[dependencies]
winit = "0.30"
wgpu = "27"
pollster = "0.3"
bytemuck = { version = "1.18", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = "0.33.0"
