[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "ray_tracer"
path = "src/lib.rs"

[[bin]]
name = "ray-tracer"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "27"
pollster = "0.3"
bytemuck = { version = "1.18", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = "0.33.0"
gltf = "1.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
